Update admin payments + app.js fixes

--- a/views/paynow.ejs
+++ b/views/paynow.ejs
@@ -15,7 +15,7 @@
         <p class="text-light">Scan the QR code below to complete your payment.</p>
 
         <div class="bg-white p-4 d-inline-block rounded shadow my-3">
-            <img src="/images/paynow_qr.png" width="260">
+            <img src="/images/paynow.jpg" width="260">
         </div>
 
         <h4 class="mt-3 text-success">Amount to Pay: $<%= amount.toFixed(2) %></h4>
